# snippet-uploader

./: .gitignore  Cargo.toml  Rocket.toml
.github/workflows/: ci.yml
migrations/20170519093018_create_users/: up.sql
migrations/20170524203057_ip_log/: up.sql
migrations/20170525064022_unsuccessful_login/: down.sql  up.sql
migrations/20170525075543_create_files/: up.sql
migrations/20170531172102_create_sessions/: up.sql
src/: main.rs  static_file.rs  upload.rs
src/db/: mod.rs  schema.rs  user.rs
src/pages/: login.rs  mod.rs  register.rs  upload.rs
static/: checkpassword.js
static/css/: index.css
templates/: base.html.tera  file.html.tera  login.html.tera  logins.html.tera  register.html.tera  upload.html.tera
