[package]
name = "snippet-uploader"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2018"

[dependencies]
rocket = { version = "=0.5.0-rc.2", features = ["secrets"] }
rocket_dyn_templates = { version = "=0.1.0-rc.2", features = ["tera"] }
diesel = { version = "1.4.6", features = ["chrono", "network-address", "postgres", "r2d2"] }
serde = "1.0.6"
serde_derive = "1.0.6"
bcrypt = "0.1.3"
error-chain = "0.10.0"
ipnetwork = "0.12.4"
multipart = "0.12.0"
chrono = "0.4.19"
sha2 = "0.5.2"
