[package]
name = "snippet-uploader"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0-rc.2", features = ["secrets"] }
rocket_dyn_templates = { version = "=0.1.0-rc.2", features = ["tera"] }
diesel = { version = "2.0.0", features = ["chrono", "network-address", "postgres", "r2d2"] }
serde = { version = "1.0.145", features = ["derive"] }
bcrypt = "0.13.0"
error-chain = "0.12.4"
ipnetwork = "0.18.0"
chrono = "0.4.22"
sha2 = "0.10.6"
